--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@
 title: DMD Graduate Exhibition 2017
 date: 23 - 26 June 2017
 address: |
-  Bournemouth University 
+  Kimmeridge House
+  Bournemouth University
   Fern Barrow 
   Poole 
   BH12 5BB
